Some working stuff
Signed-off-by: Valentin Durvenqkov <Valka7a@Valentins-MacBook-Pro.local>

--- a/projects/first-blog-project/templates/homepage.html
+++ b/projects/first-blog-project/templates/homepage.html
@@ -3,7 +3,7 @@
   <h2>All Stories</h2>
   <ul>
     {% for story in stories %}
-      <li>{% include "includes/stories.html" %}</li>
+      {% include "includes/stories.html" %}
     {% endfor %}
   </ul>
 {% endblock %}
