--- a/projects/first-blog-project/templates/layout.html
+++ b/projects/first-blog-project/templates/layout.html
@@ -11,12 +11,12 @@
       </div>
     </header>
     <div>
-    {% if not session.singed_in %}
-      <a href="{{ url_for('sing_in') }}">sing in</a>
-      <a href="{{ url_for('sing_up') }}">sing up</a>
+    {% if not session.signed_in %}
+      <a href="{{ url_for('sign_in') }}">sing in</a>
+      <a href="{{ url_for('sign_up') }}">sing up</a>
     {% else %}
       <a href="{{ url_for('create_story') }}">create story</a>
-      <a href="{{ url_for('sing_out')}}">sing out</a>
+      <a href="{{ url_for('sign_out')}}">sing out</a>
     {% endif %}
     </div>
     {% for message in get_flashed_messages() %}
